<resources>
    //Partie Main et SecondActivity
    <string name="app_name">Developpement Mobile</string>
    <string name="txt1">Activites</string>
    <string name="txt2">Settings</string>
    <string name="txt3">Home</string>
    <string name="settings">Settings</string>
    <string name="activities">Activities</string>
    <string name="home">Home</string>

    <string name="icone_phone">Icone Phone</string>
    <string name="image_localisation">Image Localisation</string>
    <string name="image_torche">Image Torche</string>
    <string name="image_son">Image Son</string>
    <string name="image_niveau">Image Niveau</string>
    <string name="txt_Localisation">Géo-Localisation</string>
    <string name="txt_enceinte">Détecteur de Son</string>
    <string name="txt_niveau">Niveau d\'Artisant</string>
    <string name="txt_torche">Lampe Torche</string>
    <string name="txt_appel">SMS/Appels</string>


    //Partie Appel
    <string name="txtNum">txtNum</string>
    <string name="appeler">appeler</string>
    <string name="envoyer_sms">envoyer_sms</string>
    <string name="numero">Numéro</string>


    //Partie Torche
    <string name="imageonoff">onOff</string>
    <string name="TextInfo">La lampe torche s\'allumera si la lumière est inférieure à 50lux et s\'éteindra uniquement si supérieur à 50lux.
        \n Vous devez secouez votre téléphone pour allumer/éteindre.</string>

    //partie Settings
    <string name="title_settings">Liste des différentes permissions nécéssaires au bon focntionnement de l\'application</string>
    <string name="subtitle">Appuyer sur les boutons pour les activer ou lesdésactiver</string>
    <string name="appels_t_l_phonique">Appels téléphonique</string>
    <string name="appel_t_lephonique">Appel Télephonique</string>
    <string name="lire_sms">SMS</string>
    <string name="camera">Camera</string>
    
    //Partie Niveau
    <string name="valueX">Value</string>
    <string name="valueY">Value</string>
    <string name="Valeur_X">Valeur_X</string>
    <string name="Valeur_Y">Valeur_Y</string>
    <string name="Background">Compass</string>
    <string name="logogit">logoGit</string>
    <string name="logomail">logoMail</string>
    <string name="logouniv">LogoUniv</string>

    //Partie localisation
    <string name="LocationDisplay"> Location display </string>
    <string name="GetLocation" > Addresse </string>

</resources>
