<?xml version="1.0" encoding="utf-8"?>
<view xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    class="androidx.drawerlayout.widget.DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="411dp">

        <TextView
            android:id="@+id/feature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F6F8F8"
            android:text="@string/txt1" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt2" />

        <TextView
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnappel"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/icone_phone"
                android:scaleX="0.85"
                android:scaleY="0.85"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/appel" />

            <ImageButton
                android:id="@+id/btnlocalisation"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/image_localisation"
                app:layout_constraintBottom_toTopOf="@+id/btnlampe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnappel"
                app:srcCompat="@drawable/localisation" />

            <ImageButton
                android:id="@+id/btnlampe"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="135dp"
                android:layout_marginBottom="135dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/image_torche"
                android:scaleX="1.25"
                android:scaleY="1.25"
                app:layout_constraintBottom_toTopOf="@+id/btnniveau"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnappel"
                app:srcCompat="@drawable/lampetorche" />

            <ImageButton
                android:id="@+id/btnenceinte"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_marginTop="135dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="160dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/image_son"
                android:scaleX="1.1"
                android:scaleY="1.1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnlocalisation"
                app:srcCompat="@drawable/enceinte" />

            <ImageButton
                android:id="@+id/btnniveau"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="25dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/image_niveau"
                android:scaleX="1.25"
                android:scaleY="1.25"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/niveau" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="50dp"
                android:text="@string/txt_niveau"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/btnniveau"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:text="@string/txt_enceinte"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/btnniveau"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnlampe" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/txt_torche"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="191dp"
                android:layout_height="34dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:text="@string/txt_Localisation"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/btnlampe"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnappel" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/txt_appel"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnappel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</view>