<?xml version="1.0" encoding="utf-8"?>
<view xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    class="androidx.drawerlayout.widget.DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="411dp">

        <TextView
            android:id="@+id/feature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F6F8F8"
            android:text="@string/txt1" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt2" />

        <TextView
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnGit"
                android:layout_width="200dp"
                android:layout_height="160dp"
                android:layout_marginStart="106dp"
                android:layout_marginLeft="106dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="106dp"
                android:layout_marginRight="106dp"
                android:contentDescription="@string/logogit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnUniv"
                app:srcCompat="@drawable/git" />

            <ImageButton
                android:id="@+id/btnUniv"
                android:layout_width="320dp"
                android:layout_height="170dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/logouniv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/univ" />

            <ImageButton
                android:id="@+id/btnMail"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/logomail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnGit"
                app:srcCompat="@drawable/mail" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</view>