<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NiveauArtisant">


    <TextView
        android:id="@+id/xText_Degree"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="104dp"
        android:text="@string/Valeur_X"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="79dp" />

    <TextView
        android:id="@+id/yText_Degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="274dp"
        android:layout_marginTop="104dp"
        android:text="@string/Valeur_Y"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="274dp" />

    <view
        android:id="@+id/theView"
        class="com.example.projet.GameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginEnd="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="-1dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/Background"
        app:srcCompat="@drawable/compass2"
        android:layout_alignParentLeft="true" />


</RelativeLayout>