<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnAppel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppelActivity">

    <TextView
        android:id="@+id/txtappel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/txtNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="50dp"
        android:text="@string/appeler"
        app:layout_constraintEnd_toStartOf="@+id/btnSMS"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numAppel" />

    <Button
        android:id="@+id/btnSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="83dp"
        android:text="@string/envoyer_sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numAppel" />

    <EditText
        android:id="@+id/numAppel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnCall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtappel" />

</androidx.constraintlayout.widget.ConstraintLayout>